--- a/tests/test2.pug
+++ b/tests/test2.pug
@@ -1,8 +1,5 @@
 #test2
   ul
-    li.one
-      a( href="#" ) Link 1
-    li.two
-      a( href="#" ) Link 2
-    li.three
-      a( href="#" ) Link 3
+    each label, index in anchors
+      li
+        a( href=`#anchor-${index+1}` )= label
