--- a/tests/test3.pug
+++ b/tests/test3.pug
@@ -4,7 +4,7 @@
       h2 Some title
     section
       p A first paragraph
-      p
-        | A second
-        | multiline
-        | paragraph
+      p.
+        A second
+        multiline
+        paragraph
